<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:inputType="textUri"
        android:key="mqtt_server"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_server_url" />

    <EditTextPreference
        android:inputType="number"
        android:key="mqtt_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_server_port" />

    <EditTextPreference
        android:inputType="text"
        android:key="mqtt_enter_topic"
        android:defaultValue="beacon/enter"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_mqtt_enter_topic" />

    <EditTextPreference
        android:inputType="text"
        android:key="mqtt_exit_topic"
        android:defaultValue="beacon/exit"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_mqtt_exit_topic" />

</PreferenceScreen>
